# Trauma-Predict

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-kaggle.txt  requirements-multires-kaggle.txt
Input design/: day design.md  field_groups_visual.md  hour design.md  input_schema_v1.md  report_schema_v2.md  static design.md  v1_target_spec.md
data dicision/: LOS_distribution_MIMICIV_UW.xlsx
docs/: DATA_POLICY.md  FILE_INDEX.md  GRUD_H1_BASELINE_SAMPLE.md  GRUD_H1_JOINT_M4_BASELINE.md  KAGGLE_RUNBOOK.md  REPO_STRUCTURE.md  STAGE_A1_RESIDUAL_RUNBOOK.md  STAGE_A_24_VS_168_ABLATION.md  TRAINING_STAGES.md
problem/: 6.10.md  6.16.md
projector/: README.md  build_vital_dataset.py  model.py  run_pipeline.py  train_smoke.py
sample builder/: README.md
schemas/: dataset_manifest.schema.json  grud_h1_baseline_dataset_manifest.schema.json  grud_h1_baseline_input_sample.schema.json  multires_event_dataset_manifest.schema.json  multires_event_normalization.schema.json  multires_event_sample.schema.json  multires_event_supervision.schema.json  multires_event_v2_dataset_manifest.schema.json  multires_event_v2_target.schema.json  sample_manifest.schema.json
tests/: test_data_preflight.py  test_grud_h1_sample_builder.py  test_grud_h1_v2_data.py  test_grud_h1_v2_kaggle_route.py  test_grud_h1_v2_model.py  test_grud_h1_v2_resume.py  test_grud_h1_v2_resume_kaggle_route.py  test_grud_h1_v2_training.py  test_manifest_contracts.py  test_multires_event_contract.py  test_multires_event_data.py  test_multires_event_kaggle_route.py  test_repo_hygiene.py  (+25 more)
(+315 files in other folders)
