[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trauma-predict"
version = "0.1.0"
description = "Code-only ML training repository for trauma ICU textual prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4.0",
]
train = [
  "accelerate>=0.34",
  "transformers>=4.44",
  "torch>=2.3",
  "tqdm>=4.66",
  "zstandard>=0.23",
]

[project.scripts]
trauma-predict = "trauma_predict.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
